# google-music-manager-auth

./: .gitignore  CONTRIBUTING.md  README.rst  setup.cfg
google_music_manager_auth/: __init__.py  auth.py
